# halo2-soundness-bugs

./: Cargo.toml  README.md
pyposeidon/: constants.py  hash.py  hash_sage.py  poseidon.sage  poseidon.sage.py
src/: casino1.rs  casino2.rs  hash.rs  main.rs  merkle.rs  merkle_nohash1.rs  merkle_nohash2.rs  merkle_nohash3.rs  merkle_nohash4.rs  merkle_nohash5.rs  non_deterministic.rs  simple_circuit.rs  underconstrained.rs
src/base/: circuit.rs
src/casino/: casino0.rs  casino1.rs  casino2.rs  mod.rs
src/hash/: mod.rs  poseidon.rs
src/merkle/: merkle_circuit.rs  merkle_nohash0.rs  merkle_nohash1.rs  merkle_nohash2.rs  merkle_nohash3.rs  merkle_nohash4.rs  mod.rs  no_hash.rs  with_hash.rs
src/mul/: mod.rs  mul0.rs  mul1.rs  mul2.rs
src/square_root/: mod.rs  sroot0.rs  sroot1.rs
