[package]
name = "pse-halo2-soundness-bugs"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.4.0" }
halo2_poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon-gadget" }
rand = "0.8.0"

[patch."https://github.com/privacy-scaling-explorations/halo2"]
halo2_proofs = { path = "../PSE-HALO2/halo2/halo2_proofs" }

[patch."https://github.com/privacy-scaling-explorations/poseidon-gadget"]
halo2_poseidon = { path = "../PSE-HALO2/poseidon-gadget" }
